* mod : re-import renamed character.dll

--- a/tools/CharacterEditor/CharacterEditor/CharacterEditor.csproj
+++ b/tools/CharacterEditor/CharacterEditor/CharacterEditor.csproj
@@ -36,11 +36,10 @@
   <ItemGroup>
     <Reference Include="Base, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\model\Sugarism\Characater\bin\Release\Base.dll</HintPath>
+      <HintPath>..\..\..\model\Sugarism\Character\bin\Release\Base.dll</HintPath>
     </Reference>
-    <Reference Include="Characater, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\model\Sugarism\Characater\bin\Release\Characater.dll</HintPath>
+    <Reference Include="Character">
+      <HintPath>..\..\..\model\Sugarism\Character\bin\Release\Character.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
