--- a/tools/ScenarioEditor/ScenarioEditor/ScenarioEditor.csproj
+++ b/tools/ScenarioEditor/ScenarioEditor/ScenarioEditor.csproj
@@ -38,9 +38,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\model\Sugarism\Scenario\bin\Release\Base.dll</HintPath>
     </Reference>
-    <Reference Include="Characater, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\model\Sugarism\Scenario\bin\Release\Characater.dll</HintPath>
+    <Reference Include="Character">
+      <HintPath>..\..\..\model\Sugarism\Scenario\bin\Release\Character.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
