* mod : fix app config, remove ref.sugarism.Character

--- a/tools/ScenarioEditor/ScenarioEditor/App.config
+++ b/tools/ScenarioEditor/ScenarioEditor/App.config
@@ -13,6 +13,18 @@
             <setting name="CharacterFilePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="BackgroundFilePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MiniPictureFilePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PictureFilePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SEFilePath" serializeAs="String">
+                <value />
+            </setting>
         </ScenarioEditor.Properties.Settings>
     </userSettings>
 </configuration>
