* mod : import target.xml * mod : import sugarism model library

--- a/tools/ScenarioEditor/ScenarioEditor/App.config
+++ b/tools/ScenarioEditor/ScenarioEditor/App.config
@@ -25,6 +25,9 @@
             <setting name="SEFilePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TargetFilePath" serializeAs="String">
+                <value />
+            </setting>
         </ScenarioEditor.Properties.Settings>
     </userSettings>
 </configuration>
