--- a/tools/ScenarioEditor/ScenarioEditor/Properties/Settings.settings
+++ b/tools/ScenarioEditor/ScenarioEditor/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="SEFilePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TargetFilePath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
