--- a/tools/ScenarioEditor/ScenarioEditor/ScenarioEditor.csproj
+++ b/tools/ScenarioEditor/ScenarioEditor/ScenarioEditor.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Common\XmlUtils.cs" />
     <Compile Include="Model\ArtsResource.cs" />
     <Compile Include="Model\Character.cs" />
+    <Compile Include="Model\Target.cs" />
     <Compile Include="ViewModel\CmdAppear.cs" />
     <Compile Include="ViewModel\CmdBackground.cs" />
     <Compile Include="ViewModel\CmdCase.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="ViewModel\CmdPicture.cs" />
     <Compile Include="ViewModel\CmdSE.cs" />
     <Compile Include="ViewModel\CmdSwitch.cs" />
+    <Compile Include="ViewModel\CmdTargetAppear.cs" />
     <Compile Include="ViewModel\CmdText.cs" />
     <Compile Include="ViewModel\Common.cs" />
     <Compile Include="Common\JsonUtils.cs" />
@@ -98,6 +100,7 @@
     <Compile Include="ViewModel\Popup\EditPicture.cs" />
     <Compile Include="ViewModel\Popup\EditScene.cs" />
     <Compile Include="ViewModel\Popup\EditSwitchCase.cs" />
+    <Compile Include="ViewModel\Popup\EditTargetAppear.cs" />
     <Compile Include="ViewModel\Popup\EditText.cs" />
     <Compile Include="ViewModel\Popup\Settings.cs" />
     <Compile Include="ViewModel\CustomInputBindings.cs" />
@@ -134,6 +137,9 @@
     </Compile>
     <Compile Include="View\Popup\EditSwitchCase.xaml.cs">
       <DependentUpon>EditSwitchCase.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Popup\EditTargetAppear.xaml.cs">
+      <DependentUpon>EditTargetAppear.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Popup\EditText.xaml.cs">
       <DependentUpon>EditText.xaml</DependentUpon>
@@ -199,6 +205,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Popup\EditSwitchCase.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Popup\EditTargetAppear.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
