* mod : update Sugarism.Scenario
* mod : cmd - TargetAppear.IsBlush, Feeling.TargetId
* add : cmd - Disappear

* mod : add sample cmd in a scene

--- a/tools/ScenarioEditor/ScenarioEditor/ScenarioEditor.csproj
+++ b/tools/ScenarioEditor/ScenarioEditor/ScenarioEditor.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ViewModel\CmdAppear.cs" />
     <Compile Include="ViewModel\CmdBackground.cs" />
     <Compile Include="ViewModel\CmdCase.cs" />
+    <Compile Include="ViewModel\CmdDisappear.cs" />
     <Compile Include="ViewModel\CmdFeeling.cs" />
     <Compile Include="ViewModel\CmdFilter.cs" />
     <Compile Include="ViewModel\CmdMiniPicture.cs" />
